--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_screenutil: ^5.9.0
+  google_fonts: ^6.1.0
+  flutter_spinkit: ^5.2.0
+  provider: ^6.0.5
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
